Test functions test broadcast receiver

--- a/small_example/MySmall/app.test/src/main/res/menu/menu_main.xml
+++ b/small_example/MySmall/app.test/src/main/res/menu/menu_main.xml
@@ -12,4 +12,10 @@
         android:orderInCategory="100"
         android:title="launch sub activity"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_0"
+        android:orderInCategory="100"
+        android:title="launch receiver"
+        app:showAsAction="never" />
 </menu>
