Test functions use libs in plugin Please enter the commit message for your changes. Lines starting

--- a/small_example/MySmall/app.test/src/main/res/menu/menu_main.xml
+++ b/small_example/MySmall/app.test/src/main/res/menu/menu_main.xml
@@ -18,4 +18,10 @@
         android:orderInCategory="100"
         android:title="launch receiver"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_1"
+        android:orderInCategory="100"
+        android:title="test files"
+        app:showAsAction="never" />
 </menu>
