--- a/small_example/MySmall/app/src/main/res/layout/activity_launch.xml
+++ b/small_example/MySmall/app/src/main/res/layout/activity_launch.xml
@@ -59,6 +59,14 @@
                 android:layout_weight="1"
                 android:text="Update" />
 
+            <Button
+                android:id="@+id/test"
+                style="?metaButtonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Test" />
+
         </LinearLayout>
     </FrameLayout>
 
